Improve tags definition and display

--- a/_posts/2010-01-01-gender.md
+++ b/_posts/2010-01-01-gender.md
@@ -3,7 +3,7 @@ layout: post
 excerpt_separator: <!--more-->
 
 title: "Gender"
-tags: photo
+tags: maker
 ---
 
 {% picture /assets/images/2014-02-16.jpg %}
