--- a/_posts/2010-08-31-bogie.md
+++ b/_posts/2010-08-31-bogie.md
@@ -3,7 +3,7 @@ layout: post
 excerpt_separator: <!--more-->
 
 title: "A colorful bogie"
-tags: photo
+tags: travel
 ---
 
 {% picture /assets/images/2010-08-31.jpg %}
