--- a/_posts/2010-09-03-fountain.md
+++ b/_posts/2010-09-03-fountain.md
@@ -3,7 +3,7 @@ layout: post
 excerpt_separator: <!--more-->
 
 title: "Fountain"
-tags: photo
+tags: travel
 ---
 
 {% picture /assets/images/2010-09-03.jpg %}
