--- a/_posts/2011-05-21-look-up.md
+++ b/_posts/2011-05-21-look-up.md
@@ -3,7 +3,7 @@ layout: post
 excerpt_separator: <!--more-->
 
 title: "Look up"
-tags: photo
+tags: travel
 ---
 
 {% picture /assets/images/2011-05-21.jpg %}
