--- a/_posts/2011-06-11-moon.md
+++ b/_posts/2011-06-11-moon.md
@@ -3,7 +3,7 @@ layout: post
 excerpt_separator: <!--more-->
 
 title: "The moon."
-tags: photo
+tags: travel
 ---
 
 {% picture /assets/images/2011-06-11.jpg %}
