--- a/_posts/2011-09-30-thumbs-up.md
+++ b/_posts/2011-09-30-thumbs-up.md
@@ -3,7 +3,7 @@ layout: post
 excerpt_separator: <!--more-->
 
 title: "Thumbs up"
-tags: photo
+tags: maker
 ---
 
 {% picture /assets/images/2011-09-30.jpg %}
