--- a/_posts/2012-04-02-tap-water.md
+++ b/_posts/2012-04-02-tap-water.md
@@ -3,7 +3,7 @@ layout: post
 excerpt_separator: <!--more-->
 
 title: "Tap water"
-tags: photo
+tags: maker
 ---
 
 {% picture /assets/images/2012-04-02.jpg %}
