--- a/_posts/2012-06-09-keyboard.md
+++ b/_posts/2012-06-09-keyboard.md
@@ -3,7 +3,7 @@ layout: post
 excerpt_separator: <!--more-->
 
 title: "Type the way our ancestors did"
-tags: photo maker
+tags: maker
 ---
 {% picture /assets/images/2012-06-09-2.jpg %}
 
