--- a/_posts/2012-10-06-cat.md
+++ b/_posts/2012-10-06-cat.md
@@ -3,7 +3,7 @@ layout: post
 excerpt_separator: <!--more-->
 
 title: "Bed pooper"
-tags: photo
+tags: travel
 ---
 
 {% picture /assets/images/2012-10-06.jpg %}
