--- a/_posts/2013-02-21-old-apple.md
+++ b/_posts/2013-02-21-old-apple.md
@@ -2,8 +2,8 @@
 layout: post
 excerpt_separator: <!--more-->
 
-title: "Old apple"
-tags: photo
+title: "No time to eat"
+tags: maker
 ---
 
 {% picture /assets/images/2013-02-21.jpg %}
