--- a/_posts/2013-07-25-knife.md
+++ b/_posts/2013-07-25-knife.md
@@ -3,7 +3,7 @@ layout: post
 excerpt_separator: <!--more-->
 
 title: "Faithful companion"
-tags: photo maker
+tags: maker
 ---
 
 {% picture /assets/images/2013-07-25.jpg %}
