--- a/_posts/2013-11-03-city.md
+++ b/_posts/2013-11-03-city.md
@@ -3,7 +3,7 @@ layout: post
 excerpt_separator: <!--more-->
 
 title: "City by night"
-tags: photo
+tags: travel
 ---
 
 {% picture /assets/images/2013-11-03.jpg %}
