--- a/_posts/2013-12-01-bedroom.md
+++ b/_posts/2013-12-01-bedroom.md
@@ -3,7 +3,7 @@ layout: post
 excerpt_separator: <!--more-->
 
 title: "Bedrooms photoshoot"
-tags: photo
+tags: maker
 ---
 
 {% picture /assets/images/2013-12-01.jpg %}
