--- a/_posts/2014-01-03-vulka.md
+++ b/_posts/2014-01-03-vulka.md
@@ -3,7 +3,7 @@ layout: post
 excerpt_separator: <!--more-->
 
 title: "Vulka"
-tags: photo
+tags: travel
 ---
 
 {% picture /assets/images/2014-01-03.jpg %}
