--- a/_posts/2010-05-05-drawings.md
+++ b/_posts/2010-05-05-drawings.md
@@ -3,7 +3,7 @@ layout: post
 excerpt_separator: <!--more-->
 
 title: "Drawings"
-tags: drawing
+tags: maker
 ---
 
 {% picture /assets/images/2010-02-15.jpg %}
