--- a/_posts/2010-07-17-fireball.md
+++ b/_posts/2010-07-17-fireball.md
@@ -3,7 +3,7 @@ layout: post
 excerpt_separator: <!--more-->
 
 title: "Fireball"
-tags: photo
+tags: maker
 ---
 
 {% picture /assets/images/2010-07-17.jpg %}
