--- a/_posts/2010-10-26-50kv.md
+++ b/_posts/2010-10-26-50kv.md
@@ -3,7 +3,7 @@ layout: post
 excerpt_separator: <!--more-->
 
 title: "50 KV"
-tags: photo
+tags: maker
 ---
 
 {% picture /assets/images/2010-10-26.jpg %}
