--- a/_posts/2011-04-28-toulon.md
+++ b/_posts/2011-04-28-toulon.md
@@ -3,10 +3,8 @@ layout: post
 excerpt_separator: <!--more-->
 
 title: "Toulon"
-tags: photo
+tags: travel
 ---
 
 {% picture /assets/images/2011-04-28.jpg %}
-
-{% picture /assets/images/2011-04-28-2.jpg %}
 <!--more-->
