--- a/_posts/2011-06-18-mars.md
+++ b/_posts/2011-06-18-mars.md
@@ -3,7 +3,7 @@ layout: post
 excerpt_separator: <!--more-->
 
 title: "Mars in the sky"
-tags: photo
+tags: travel
 ---
 
 {% picture /assets/images/2011-07-07.jpg %}
