--- a/_posts/2012-04-13-metro.md
+++ b/_posts/2012-04-13-metro.md
@@ -3,7 +3,7 @@ layout: post
 excerpt_separator: <!--more-->
 
 title: "Metro"
-tags: photo
+tags: travel
 ---
 
 {% picture /assets/images/2012-04-13.jpg %}
