--- a/_posts/2012-05-30-bokeh.md
+++ b/_posts/2012-05-30-bokeh.md
@@ -3,7 +3,7 @@ layout: post
 excerpt_separator: <!--more-->
 
 title: "Bokeh"
-tags: photo
+tags: travel
 ---
 
 {% picture /assets/images/2012-05-30.jpg %}
