--- a/_posts/2012-12-25-remnants.md
+++ b/_posts/2012-12-25-remnants.md
@@ -3,7 +3,7 @@ layout: post
 excerpt_separator: <!--more-->
 
 title: "Remnants"
-tags: photo
+tags: travel
 ---
 
 {% picture /assets/images/2012-12-25.jpg %}
