--- a/_posts/2014-01-11-6th-street.md
+++ b/_posts/2014-01-11-6th-street.md
@@ -3,7 +3,7 @@ layout: post
 excerpt_separator: <!--more-->
 
 title: "6th street"
-tags: photo
+tags: travel
 ---
 
 {% picture /assets/images/2014-01-11.jpg %}
